<resources>
    <string name="app_name">隨意創作</string>

    <string name="main_tab_title_home">首頁</string>
    <string name="main_tab_title_profile">我的</string>
    <string name="profile_title_message">消息中心</string>

    <string name="pokemon_add_to_favorite">添加%s至我的最愛</string>
    <string name="pokemon_remove_from_favorite">從我的最愛移除%s</string>
    <string name="pokemon_set_atk">ATK %d</string>
    <string name="pokemon_set_def">DEF %d</string>
    <string name="pokemon_set_spd">SPD %d</string>
    <string name="pokemon_set_total">TOTAL %d</string>
    <string name="pokemon_set_hp">HP %d</string>
    <string name="pokemon_set_height">HEIGHT %s</string>
    <string name="pokemon_set_weight">WEIGHT %s</string>
    <string name="pokemon_title_about">About</string>

    <string name="calendar_title_note">備忘錄</string>
    <string name="calendar_title_note_empty">尚無備忘錄</string>
    <string name="calendar_delete">刪除</string>
    <string name="calendar_title_note_add">新增備忘錄</string>
    <string name="calendar_title_note_edit">編輯備忘錄</string>
    <string name="calendar_note_title_input">請輸入標題</string>
    <string name="calendar_note_content_input">請輸入內容</string>
    <string name="calendar_note_btn_add">新增</string>
    <string name="calendar_note_btn_save">存檔</string>
    <string name="calendar_month">月</string>
    <string name="calendar_add_note">在%s添加備忘錄:%s</string>
    <string name="calendar_edit_note">編輯%s的備忘錄:%s</string>
    <string name="calendar_remove_note">移除%s的備忘錄:%s</string>

    <string name="cancel">取消</string>

    <string name="message_more">更多</string>
    <string name="message_empty">暫無消息</string>
</resources>