<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <ImageView
        android:id="@+id/iv_heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:src="@drawable/ic_heart_disable"
        app:layout_constraintBottom_toBottomOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_name" />

    <LinearLayout
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_id"
        app:layout_constraintTop_toBottomOf="@id/tv_id">

        <TextView
            android:id="@+id/tv_atk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pokemon_set_atk" />

        <TextView
            android:id="@+id/tv_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pokemon_set_def" />

        <TextView
            android:id="@+id/tv_spd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pokemon_set_spd" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_pokemon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/value"
        app:layout_constraintTop_toBottomOf="@id/iv_heart" />

</androidx.constraintlayout.widget.ConstraintLayout>