<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.yilin.mybase.view.AppActionBar
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_month_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_month_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar_month"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_month"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/tv_month_title"
                app:layout_constraintTop_toTopOf="@id/tv_month_title" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_calendar_down"
                app:layout_constraintEnd_toEndOf="@id/tv_year"
                app:layout_constraintTop_toBottomOf="@id/tv_year" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/mcv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/background_shadow_frame"
            android:padding="24dp"
            app:layout_constraintTop_toBottomOf="@id/cl_month_year"
            app:mcv_selectionColor="@color/white"
            app:mcv_showOtherDates="all"
            app:mcv_tileHeight="36dp"
            app:mcv_weekDayTextAppearance="@style/MyCalendar" />


        <TextView
            android:id="@+id/tv_title_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/calendar_title_note"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mcv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_note"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingVertical="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_note"
            tools:itemCount="3"
            tools:listitem="@layout/item_calendar_note" />

        <ImageView
            android:id="@+id/iv_note_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@mipmap/ic_add"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title_note" />

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_title_note_empty"
            android:textColor="@color/color_light_gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_note" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>